--- a/package.json
+++ b/package.json
@@ -44,3 +44,8 @@
     "tailwindcss": "^3.4.0"
   }
 }
+"homepage": "https://shankhdhar11.github.io/Translator-",
+"scripts": {
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
+}
